Delete Blog Feature Added

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -12,7 +12,7 @@
             </div>
             <div class = "field">
                 <label>Blog Content</label>
-                <textarea name = "blog[body]"><%= blog.body %></textarea>
+                <textarea name = "blog[body]" required><%= blog.body %></textarea>
             </div>
             <input type = "submit" class = "ui red basic button">
         </form>
