--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 	<div class = "ui main text container segment">
 		<p><%= blog.title %></p>
 		<img src = "<%=blog.image%>"><br>
-		<p><%= blog.body.substring(0, 100) %>...</p>
+		<p><%- blog.body.substring(0, 100) %></p>
 		<a href="/blogs/<%= blog._id %>">Read More</a>
 	</div>
 <% }) %>
