--- a/views/show.ejs
+++ b/views/show.ejs
@@ -10,8 +10,11 @@
                     <div class = "description">
                         <p><%- blog.body %></p>
                     </div>
+                    <a href="/blogs/<%=blog._id%>/edit" class = "ui orange basic button">Edit</a>
+                    <form id = "delete" action = "/blogs/<%=blog._id%>?_method=DELETE" method = "POST">
+                        <button class = "ui red basic button">Delete</button>
+                    </form>
                 </div>
             </div>
     </div>
 <%- include("partials/footer") %>
-
