--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,35 @@
 <%- include("partials/header") %>
-
-<% blogs.forEach(function(blog){ %>
-	<div class = "ui main text container segment">
-		<p><%= blog.title %></p>
-		<img src = "<%=blog.image%>"><br>
-		<p><%- blog.body.substring(0, 100) %></p>
-		<a href="/blogs/<%= blog._id %>">Read More</a>
+<div class = "ui main text container">
+	<div class = "ui huge header">
+		RESTful Blog App
 	</div>
-<% }) %>
+	<div class = "ui top attached segment">
+		<div class = "ui divided items">
+			<% blogs.forEach(function(blog){ %>
+				<div" class = "item">
+					<div class = "image"><img src = "<%=blog.image%>"></div>
+					<div class = "content">
+						<a href="/blogs/<%= blog._id %>" class="header"><%=blog.title%></a>
+						<div class = "meta">
+							<span>
+								<%= blog.created.toDateString() %>
+							</span>
+							<div class = "description">
+								<p><%- blog.body.substring(0, 100) %>...</p>
+							</div>
+							<div class = "extra">
+								<a class = "ui floated basic violet button" href= "/blogs/<%=blog._id%>">
+									Read More
+								</a>
+							</div>
+						</div>
+					</div>
+					
+				</div>
+			<% }) %>
+		</div>
+	</div>
+</div>
+
+
 <%- include("partials/footer") %>
