--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <%- include("partials/header") %>
 <div class = "ui main text container">
 	<div class = "ui huge header">
-		RESTful Blog App
+		RESTful Routing Blog App
 	</div>
 	<div class = "ui top attached segment">
 		<div class = "ui divided items">
